KubernetesWorkshop/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubenatesworkshop-app1
  namespace: my-namespace
spec:
  selector:
    app: kubenatesworkshop-app1
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kubenatesworkshop-app2
  namespace: my-namespace
spec:
  selector:
    app: kubenatesworkshop-app2
  ports:
    - protocol: TCP
      port: 28080
      targetPort: 8080
  type: NodePort
