KubernetesWorkshop/k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubenatesworkshop-ingress
  namespace: my-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: workshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubenatesworkshop-app1
                port:
                  number: 18080
